@@ -275,6 +275,7 @@ Changelog
 1.1.4 ???
 	+ Added ``--debug-info`` command line option (for *FireSass* output).
 	+ Added compass helper function ``reject()``.
+	+ Added ``undefined`` keyword for undefined variables.
 
 1.1.3 Jan 9, 2012
 	+ Support for the new Sass 3.2.0 features (``@content`` and placeholder selectors)
